# KaiEngine

./: .clang_complete  CMakeLists.txt  README.md
res/shader/: g_pbr.fshader  g_pbr.vshader  test.fshader  test.vshader
src/: main.cpp
src/core/: entity.h  input.cpp  input.h
src/core/gamestate/: gamestate.h  gamestatemanager.cpp  gamestatemanager.h  ingame.cpp  ingame.h
src/rendering/: ModelEntity.cpp  ModelEntity.h  camera.cpp  camera.h  deferredrenderer.cpp  deferredrenderer.h  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  texturedmodel.cpp  texturedmodel.h  vertex.h
src/rendering/resources/: MeshManager.cpp  MeshManager.h  shadermanager.cpp  shadermanager.h  texturemanager.cpp  texturemanager.h
